--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "netlify dev",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit"
@@ -19,6 +20,7 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
     "dotenv": "^8.2.0",
+    "netlify-cli": "^2.20.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.5.17"
